--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<html>
-    <head>
-        <title>Blog Django</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Blog Django</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
 
-        {% for post in posts %}
-            <div>
-                <p>publicado em: {{ post.published_data}}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                published: {{ post.published_data }}
             </div>
-        {% endfor %}
-
-    </body>
-</html>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
